# natt-pundit

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  LICENSE  README.md  SECURITY.md  docker-compose.hackathon.yml  package-lock.json  package.json
api/: README.md
deploy/: nginx-hypernatt-fr-nattpundit.conf
docs/: 235_ARCHITECTURE_MICROSERVICES.md  238_I18N_AND_PUBLIC_REPO.md  239_ARCH_PREDICTION_MARKETS_MICROSERVICES.md  240_AUDIT_F67N_NATT_SETTLEMENT_BENTER.md  241_SPEC_F67N_NATT_SETTLEMENT_BENTER.md  242_TASK_F67N_NATT_SETTLEMENT_BENTER.md  243_AUDIT_F68N_NATT_SETTLEMENT_VERIFY_LIVE_PUBLIC.md  244_SPEC_F68N_NATT_SETTLEMENT_VERIFY_LIVE_PUBLIC.md  245_TASK_F68N_NATT_SETTLEMENT_VERIFY_LIVE_PUBLIC.md  275_SECURITY_REMEDIATION_MASTER_PLAN.md  AUDIT_F96N_KEEPER_SNAPSHOT.md  AUTONOMOUS_AGENT_CDP.md  CURSOR_NATT_PUNDIT_MCP.md  ENGINE_VPS_ONLY.md  JURY_VERIFICATION.md  QUICKSTART_JURY.md  SUBMISSION_CHECKLIST.md  SUBMISSION_FORM_READY.md  SUBMISSION_KIT.md  TXLINE_FEEDBACK.md  TXLINE_SETTLEMENT.md  USER_GUIDE.md
fixtures/: wc_live_match.json  wc_replay_match.json
lib/: README.md
scripts/: _airdrop-agent-sol-devnet.mjs  _fund-cdp-agent-devnet.mjs  compress_ui_assets.py  enable-escrow-vps.sh  ensure-edge-engine.mjs  ensure-edge-engine.sh  generate_ui_assets.py  natt-agent-autonomous.mjs  natt-agent-cdp-autonomous.mjs  quality.ps1  quality.sh  setup_stitch_adc.ps1  stitch_mcp_proxy.ps1  stitch_pull_ui.mjs  stitch_refresh_mcp.ps1  (+1 more)
solana-escrow/programs/natt_escrow/: Cargo.toml
solana-escrow/programs/natt_escrow/src/: guards.rs  lib.rs  txline_ix.rs
web/: README.md
(+408 files in other folders)
