[package]
name = "natt_escrow"
version = "0.1.0"
description = "Natt Pundit WC26 parimutuel escrow with TxLINE validate_stat CPI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "natt_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", default-features = false, features = ["token"] }
borsh = "1.5"
